--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.font-inter {
+  font-family: "Inter", sans-serif;
+}
+
+
 
 .loader {
   border-top-color: #3498db;
